@@ -1,3 +1,10 @@
+Fri Apr  1 17:05:51 2005  Peter Naulls  <peter@chocky.org>
+
+	* source/strcpy.c, source/strlen.c: Removed
+	* source/string/_strcpy.s, source/string/_strlen.s: New
+	  faster versions from Adiran Lees.
+	* source/unix/dev.c: Remove old free call.
+
 Thu Mar 31 13:55:25 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* sched.h (sched_yield): Add prototype.
